@@ -21,6 +21,7 @@ class TestGemPlatform < RubyGemTestCase
   def test_self_new
     assert_equal Gem::Platform::RUBY, Gem::Platform.new(Gem::Platform::RUBY)
     assert_equal Gem::Platform::RUBY, Gem::Platform.new(nil)
+    assert_equal Gem::Platform::RUBY, Gem::Platform.new('')
   end
 
   def test_initialize
